--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
+    
+  },
+  "engines": {
+    "node":"14.x",
+    "npm": "6.x"
   },
   "repository": {
     "type": "git",
