--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
-    
   },
   "engines": {
-    "node":"14.x",
+    "node": "14.x",
     "npm": "6.x"
   },
   "repository": {
@@ -21,7 +20,7 @@
   "bugs": {
     "url": "https://github.com/coding-boot-camp/module-14-project-mvc/issues"
   },
-
+  "homepage": "https://github.com/coding-boot-camp/module-14-project-mvc#readme",
   "dependencies": {
     "bcrypt": "^4.0.1",
     "connect-session-sequelize": "^6.1.1",
