--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "tech-blog",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Description    Users are able to sign up or login in to post on the blog. The posts created by the user can be seen in the dashboard when the user and all the posts can be seen on the home page. The users will also be able to update their post or add a comment to any post.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
-   
   },
   "engines": {
     "node": "14.x",
@@ -28,8 +27,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
-    "express-session": "^1.17.0",
-    "mysql2": "^2.0.1",
-    "sequelize": "^5.21.2"
-  }
+    "express-session": "^1.17.1",
+    "init": "^0.1.2",
+    "mysql2": "^2.2.5",
+    "node": "^15.12.0",
+    "sequelize": "^5.22.4"
+  },
+  "devDependencies": {},
+  "keywords": []
 }
